--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   display: flex;
   justify-content: center;
   /*background-color: var(--lightGrayishBlue);*/
-  background-color: yellow;
+  background-color: green;
   padding-top: 150px;
   padding-bottom: 150px;
 }
