--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@
 }
 .foto {
   border-radius: 50%;
-  margin-right: 1rem;
+  margin-right: 1em;
 }
 
 @media only screen and (max-width: 975px) {
